welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: '(' expected but identifier found.
  if negative
     ^